<resources>
    <string name="app_name">CapstoneNom</string>
    <string name="title_home">Home</string>
    <string name="title_food">Food</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_food_detail">Food Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="take_food">Take new food image</string>
    <string name="view_history">View History</string>
    <string name="picture">Picture</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="image_preview">Image Preview</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="search_your_food">Search Your Food</string>
    <string name="search_button">Search Button</string>
    <string name="user_account">User Account</string>
    <string name="nutrition_history">Nutrition History</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="app_version">App Version</string>
    <string name="version">1.0.0</string>
    <string name="result">Result</string>
    <string name="nutrient_amount">%.2f%s</string>
    <string name="serving_size">Serving Size %d%s</string>
    <string name="percentage">%.2f%%</string>
    <string name="desc_history">Your Food Calories History</string>
    <string name="description">Your health is a reflection of what you eat</string>
    <string name="password_more_6">Password must be more than 6 characters</string>
    <string name="error_email">Please enter your e-mail</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="desc_signup">don\'t have an account yet?</string>
    <string name="signup">SignUp</string>

    <string name="project_name">Nom Food Classification</string>
    <string name="have_account">Already have an account?</string>
    <string name="signin">SignIn</string>
    <string name="register">Register</string>
    <string name="desc_login">Start Health life, know what you eat</string>
    <string name="txt_signin">Or SignIn with</string>
    <string name="desc_home">Haloo, Welcome</string>
    <string name="account">Your Email</string>
    <string name="id_user">ID User</string>
    <string name="copyright">© 2022 Capstone Team C22-PS126</string>
    <string name="desc_register">Hello, Don\'t have an account yet? register to enjoy our project features.</string>
    <string name="gallery">Gallery</string>
    <string name="food_name">Food Name</string>


</resources>