<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.capstonenom.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_to_detail"
            app:destination="@id/navigation_food_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.bangkit.capstonenom.ui.fragment.food.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.bangkit.capstonenom.ui.fragment.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_foodDetailsFragment"
            app:destination="@id/navigation_food_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.bangkit.capstonenom.ui.fragment.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_food_detail"
        android:name="com.bangkit.capstonenom.ui.fragment.detail.FoodDetailFragment"
        android:label="@string/title_food_detail"
        tools:layout="@layout/fragment_food_detail" >
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
</navigation>